fix: attachment type queries (lots of duplication for now)